Fix mobile sidebar CSS - hide menu by default on mobile devices

--- a/assets/css/easyco.css
+++ b/assets/css/easyco.css
@@ -253,6 +253,10 @@ a.easyco-link:hover {
         border-bottom: none;
     }
     
+    .sidebar.easyco-sidebar:not(.show) {
+        display: none;
+    }
+    
     .sidebar.easyco-sidebar.show {
         display: block !important;
     }
